src/build/log/idf_py_stderr_output_261416
Command: make -j 18 all
Configuration Report               
 ───────────────────────────────── 
   Parser Version: 1               
   Verbosity: default              
   Defaults policy: sdkconfig      
   Status: Finished successfully   
                                   
 ───────────────────────────────── 
CMake Warning at /home/kartix/Projects/esp/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/kartix/Projects/esp/esp-idf/components/esp_wifi/wifi_apps/roaming_app/include'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /home/kartix/Projects/esp/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/kartix/Projects/esp/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /home/kartix/Projects/esp/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/kartix/Projects/esp/esp-idf/components/esp_wifi/wifi_apps/roaming_app/src'
  belongs to component esp_wifi but is being used by component
  wpa_supplicant.  It is recommended to define the component dependency for
  wpa_supplicant on the component esp_wifi, i.e.  'idf_component_register(...
  PRIV_REQUIRES esp_wifi)' in the CMakeLists.txt of wpa_supplicant, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component esp_wifi.
Call Stack (most recent call first):
  /home/kartix/Projects/esp/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/kartix/Projects/esp/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /home/kartix/Projects/esp/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/kartix/Projects/esp/esp-idf/components/wpa_supplicant/src' belongs
  to component wpa_supplicant but is being used by component esp_wifi.  It is
  recommended to define the component dependency for esp_wifi on the
  component wpa_supplicant, i.e.  'idf_component_register(...  PRIV_REQUIRES
  wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and specify the
  included directory as idf_component_register(...  PRIV_INCLUDE_DIRS <dir
  relative to component>) in the CMakeLists.txt of component wpa_supplicant.
Call Stack (most recent call first):
  /home/kartix/Projects/esp/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/kartix/Projects/esp/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


CMake Warning at /home/kartix/Projects/esp/esp-idf/tools/cmake/component_validation.cmake:106 (message):
  Private include directory
  '/home/kartix/Projects/esp/esp-idf/components/wpa_supplicant/esp_supplicant/src'
  belongs to component wpa_supplicant but is being used by component
  esp_wifi.  It is recommended to define the component dependency for
  esp_wifi on the component wpa_supplicant, i.e.  'idf_component_register(...
  PRIV_REQUIRES wpa_supplicant)' in the CMakeLists.txt of esp_wifi, and
  specify the included directory as idf_component_register(...
  PRIV_INCLUDE_DIRS <dir relative to component>) in the CMakeLists.txt of
  component wpa_supplicant.
Call Stack (most recent call first):
  /home/kartix/Projects/esp/esp-idf/tools/cmake/component_validation.cmake:130 (__component_validation_check_include_dirs)
  /home/kartix/Projects/esp/esp-idf/CMakeLists.txt:353 (__component_validation_run_checks)


/home/kartix/Projects/esp/esp-idf/projects/blinky/main/supermain.c: In function 'command_get_handler':
/home/kartix/Projects/esp/esp-idf/projects/blinky/main/supermain.c:166:29: error: 'HTTPD_503_SERVICE_UNAVAILABLE' undeclared (first use in this function)
  166 |                             HTTPD_503_SERVICE_UNAVAILABLE,
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/kartix/Projects/esp/esp-idf/projects/blinky/main/supermain.c:166:29: note: each undeclared identifier is reported only once for each function it appears in
/home/kartix/Projects/esp/esp-idf/projects/blinky/main/supermain.c: At top level:
/home/kartix/Projects/esp/esp-idf/projects/blinky/main/supermain.c:28:20: warning: 'TAG' defined but not used [-Wunused-variable]
   28 | static const char *TAG = "APP";
      |                    ^~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/supermain.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:8651: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
